# boredLoader

./: readme.md
C2/: index.php
client/: Cargo.toml
client/src/: comm.rs  info.rs  main.rs  persistence.rs  task.rs
