[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["blocking", "json"] }
machineid-rs = "1.2.4"
whoami = "1.5"
obfstr = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.10.1"
serde_json = "1.0.149"
winreg = "0.52"

[profile.release]
opt-level = "s"
panic = "abort"
strip = true
lto = true
debug = false
